--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,71 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>College Placement System </title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7cec9946a2.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="container">
         <div class="form-box">
-            <h1 id="title">SIGN UP</h1>
-            <form>
-                <div class="input-group" id="namefield">
-                    <div class="input-field">
-                        <i class="fa-solid fa-circle-user"></i>
-                        <input type="text" placeholder="Name">
-                    </div>
-                </div>
-
+            <h1 id="title">Login</h1>
+            <form method="post" action="http://localhost:3000/student/login">
                 <div class="input-group" id="emailField">
                     <div class="input-field">
                         <i class="fa-solid fa-envelope"></i>
-                        <input type="email" placeholder="Email">
+                        <input type="email" placeholder="Email" name="email">
                     </div>
                 </div>
 
                 <div class="input-group" id="passwordField">
-                    <div class="input-field">
+                    <div class="input-field gender">
                         <i class="fa-solid fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" placeholder="Password" name="password">
                     </div>
                 </div>
-                <p>Forgot Password  <a href="#">Click Here!</a></p>
+                <p>Forgot Password <a href="#">Click Here!</a></p>
+                <p>Don't Have a Account <a href="signup.html">Register Now</a></p>
                 <div class="btn-field">
-                    <button type="button" id="signupBtn">Sign Up</button>
-                    <button type="button" id="signinBtn" class="disable">Sign In</button>
+                    <button type="submit" id="signupBtn">Sign Up</button>
+                    <button type="reset">Reset</button>
                 </div>
             </form>
         </div>
     </div>
-
-<script>
-    let signupBtn = document.getElementById("signupBtn");
-    let signinBtn = document.getElementById("signinBtn");
-    let namefield = document.getElementById("namefield");
-    let emailField = document.getElementById("emailField");
-    let passwordField = document.getElementById("passwordField");
-    let title = document.getElementById("title");
-
-    signinBtn.addEventListener("click", function() {
-        namefield.style.display = "none"; // Disabling name field
-        emailField.style.maxHeight = "65px"; // Adjusting email field height
-        passwordField.style.maxHeight = "65px"; // Adjusting password field height
-        title.innerHTML = "Sign In";
-        signupBtn.classList.add("disable");
-        signinBtn.classList.remove("disable");
-    });
-
-    signupBtn.addEventListener("click", function() {
-        namefield.style.display = "block"; // Resetting name field display
-        emailField.style.maxHeight = "65px"; // Resetting email field height
-        passwordField.style.maxHeight = "65px"; // Resetting password field height
-        title.innerHTML = "Sign Up";
-        signupBtn.classList.remove("disable");
-        signinBtn.classList.add("disable");
-    });
-</script>
 </body>
+
 </html>
